--- a/deno.json
+++ b/deno.json
@@ -5,6 +5,7 @@
   "imports": {
     "@libs/xml": "jsr:@libs/xml@^7.0.3",
     "@std/assert": "jsr:@std/assert@^1.0.16",
+    "@std/crypto": "jsr:@std/crypto@^1.0.5",
     "@std/dotenv": "jsr:@std/dotenv@^0.225.5",
     "@valibot/valibot": "jsr:@valibot/valibot@^1.1.0"
   }
