--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -27,5 +27,8 @@ jobs:
       - name: Run linter
         run: deno lint
 
+      - name: Type Check
+        run: deno check
+
       - name: Run tests
         run: deno test -A
